--- a/Unidad  1/index.html
+++ b/Unidad  1/index.html
@@ -1,1 +1,61 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <BOdy style="background-color: rgb(236, 180, 12);"></BOdy>
+    <nav>
+        <a href="#Enlaces">Enlaces</a>
+    </nav>
+    <main>
+        <section id="Bio">
+            <h2>IMAGENES</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore libero omnis amet quisquam quo commodi, aliquid debitis temporibus laudantium facere, modi nobis minus ipsum eveniet animi itaque quibusdam ex in?</p>
+            <H2>Gestion de imagenes</H2>
+            <h3>Importando desde la web</h3>
+            <img src="https://images.pexels.com/photos/20347150/pexels-photo-20347150/free-photo-of-carretera-paisaje-naturaleza-pueblo.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+            <h4>Importando de manera local</h4>
+            <img src="img/img.jpeg" alt="">
+            <h4>figura con captio</h4>
+            <figure>
+                <img src="https://images.pexels.com/photos/20347150/pexels-photo-20347150/free-photo-of-carretera-paisaje-naturaleza-pueblo.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+                <figcaption>figcaption</figcaption>
+            </figure>
+            <video controls>
+                <source>
+            </video>
 
+
+        </section>
+
+        <section id="enlaces">
+            <h2>Enlaces</h2>
+            <a href="https://www.youtube.com/watch?v=Xw8zdvi6Xi0">ir al video</a>
+
+
+        </section>
+        <!--crear tablas-->
+        <section id="tablas">
+            <h2>creando tablas</h2>
+            <table>
+                <tr>
+                    <td>Cantidad</td>
+                    <td>Producto</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>Cuchillo</td>
+                </tr>
+            <table></table>
+
+            </table>
+
+        </section>
+
+    </main>
+    
+</body>
+</html>
