--- a/Unidad 2/index.html
+++ b/Unidad 2/index.html
@@ -1,1 +1,33 @@
-
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Unidad 2</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="favicon/favicon-16x16.png" type="image/png">
+    <style>
+        .flex-container {
+            display: flex;
+            /* Opcional: otras propiedades para personalizar el contenedor */
+            justify-content: center; /* Alineación horizontal */
+            align-items: center;    /* Alineación vertical */
+            height: 10vh;          /* Altura del contenedor */
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            font-weight: bolder;
+            text-decoration: none;
+            background-color: #1ce240; /* Color de fondo */
+        }
+        .flex-item {
+            background-color: #4CAF50;
+            padding: 5px;
+            margin: 5px;
+            color: rgb(246, 9, 9);
+            font-size: 1.2em;
+        }
+    </style>
+</head>
+<body>
+    <!-- Cambiar color de fondo 
+    <body style = "background-color: blanchedalmond;">
+    -->  
